[gd_scene load_steps=4 format=3 uid="uid://la82br576quu"]

[ext_resource type="Script" path="res://breakout/scenes/ui/consumable_info_screen.gd" id="1_h3v2l"]
[ext_resource type="Texture2D" uid="uid://cy16mrordqn4a" path="res://breakout/assets/poke0.png" id="2_cbke7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12wr1"]
bg_color = Color(1, 0.933333, 0.552941, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.505882, 0.184314, 0.2, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="ConsumableInfoScreen" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_right = -688.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_12wr1")
script = ExtResource("1_h3v2l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Sprite" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_cbke7")

[node name="RestTimesLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Sprite"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -28.0
offset_right = -3.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Void" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 15.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "Name"
vertical_alignment = 1
autowrap_mode = 1
text_overrun_behavior = 3

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Description

multiline"
autowrap_mode = 3
